@@ -40,6 +40,9 @@ def modes( ):
         elif common.args.mode.endswith('Search'):
             import resources.lib._search as search
             search.Main()
+        elif common.args.mode.endswith('Queue') or common.args.mode.endswith('Subscriptions'):
+            import resources.lib._menu as queue
+            queue.Main()
         else:
             import xbmcgui
             xbmcgui.Dialog().ok('common.args.mode',common.args.mode)
